# asst1

./: README.md
Renderer/: CMakeLists.txt  RasterRenderer.sln
Renderer/RasterRenderer/: CMakeLists.txt  CommonTraceCollection.h  Fragment.h  FrameBuffer.cpp  FrameBuffer.h  IRasterRenderer.cpp  IRasterRenderer.h  ModelResource.cpp  ModelResource.h  NontiledForwardRenderer.cpp  Parallel.h  PolygonClipper.h  ProjectedTriangle.h  RasterRenderer.vcxproj  RasterRenderer.vcxproj.filters  Rasterizer.h  RenderState.h  RendererImplBase.h  Shader.cpp  Shader.h  Statistics.cpp  Statistics.h  TiledRenderer.cpp  Tracing.h  VertexBuffer.h
Renderer/TestDriver/: CMakeLists.txt  LightingShader.h  TestDriver.cpp  TestDriver.vcxproj  TestDriver.vcxproj.filters  TestScene.cpp  TestScene.h  TestScene0.cpp  TestScene1.cpp  TestScene2.cpp  TestScene3.cpp  TestScene4.cpp  TestScene5.cpp  TestScene6.cpp  TestScene7.cpp  TestScene8.cpp  ViewSettings.h  targetver.h
Renderer/lib/tbb/: aggregator.h  aligned_space.h  atomic.h  blocked_range.h  blocked_range2d.h  blocked_range3d.h  cache_aligned_allocator.h  combinable.h  concurrent_hash_map.h  concurrent_lru_cache.h  concurrent_priority_queue.h  concurrent_queue.h  concurrent_unordered_map.h  concurrent_unordered_set.h  concurrent_vector.h  critical_section.h  enumerable_thread_specific.h  flow_graph.h  index.html  memory_pool.h  mutex.h  null_mutex.h  null_rw_mutex.h  parallel_do.h  parallel_for.h  parallel_for_each.h  parallel_invoke.h  parallel_reduce.h  parallel_scan.h  parallel_sort.h  parallel_while.h  partitioner.h  pipeline.h  queuing_mutex.h  queuing_rw_mutex.h  reader_writer_lock.h  recursive_mutex.h  runtime_loader.h  scalable_allocator.h  spin_mutex.h  (+16 more)
Renderer/lib/tbb/compat/: condition_variable  ppl.h  thread  tuple
Renderer/lib/tbb/internal/: _aggregator_impl.h  _concurrent_queue_impl.h  _concurrent_unordered_impl.h  (+8 more)
Renderer/lib/x64/: libtbb_preview.so.2  libtbb_preview_debug.so.2  libtbbmalloc.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy.so.2  libtbbmalloc_proxy_debug.so.2  tbb.def  tbb.lib  tbb_debug.lib  tbb_preview.lib  tbb_preview_debug.lib  tbbmalloc.lib  tbbmalloc_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib  tbbproxy.lib  tbbproxy_debug.lib
Renderer/lib/x86/: libirml.so.1  libirml_debug.so.1  libtbbmalloc_debug.so.2  libtbbmalloc_proxy_debug.so.2  tbb.def  tbb.lib  tbb_debug.lib  tbb_preview.lib  tbb_preview_debug.lib  tbbmalloc.lib  tbbmalloc_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib  tbbproxy.lib  tbbproxy_debug.lib
(+113 files in other folders)
