add_executable(render
CMakeLists.txt
stdafx.cpp
stdafx.h
TestDriver.cpp
TestScene.cpp
TestScene.h
TestScene0.cpp
TestScene1.cpp
TestScene2.cpp
TestScene3.cpp
TestScene4.cpp
TestScene5.cpp
TestScene6.cpp
TestScene7.cpp
TestScene8.cpp
ViewSettings.h
)

target_link_libraries(render RasterRendererLib)
